# ConsoleApplicationGames

./: .gitignore  CMakeLists.txt  README.md  documentation.docx  documentation1.docx  ~$cumentation.docx
project/: CMakeLists.txt  help_message.txt  main.cpp  start_message228.txt
project/game1/: CMakeLists.txt  game1.cpp  game1.hpp  game1_rules.txt
project/game2/: CMakeLists.txt  game2.cpp  game2.hpp  game2_rules.txt
